Fixed a bug in the Task REST API, and finished the test for the basic endpoints